corrected contacts links animation / button on mobiles / changed image color om mobile landscape position

--- a/app/css/site.css
+++ b/app/css/site.css
@@ -330,25 +330,20 @@ img[data-object-fit="cover"] { object-fit: cover; }
 
 .contacts-page button { position: relative; width: 100%; border: none; outline: 0; background-color: rgba(255, 255, 255, 0.1); box-shadow: inset 0 0 2px 1px #2c458f; border-radius: 3px; color: #fff; transition: 0.4s ease; padding: 0; box-sizing: border-box; overflow: hidden; letter-spacing: 2px; }
 
-.contacts-page button span { position: relative; display: block; padding-top: 12px; box-sizing: border-box; padding-bottom: 12px; }
+.contacts-page button span { padding-top: 12px; padding-bottom: 12px; display: block; position: relative; box-sizing: border-box; }
 
-.contacts-page button span::after { content: ""; position: absolute; left: 0; top: 101%; width: 100%; height: 1px; transition: 0.5s ease; background-color: #4363c5; }
-
-.contacts-page button span::before { content: ""; position: absolute; right: 0; bottom: 101%; width: 100%; height: 1px; transition: 0.4s ease; background-color: #4363c5; }
-
-.contacts-page button::after { content: ""; position: absolute; left: 100%; top: 0; width: 1px; height: 100%; transition: 0.4s ease; background-color: #4363c5; }
-
-.contacts-page button::before { content: ""; position: absolute; right: 100%; bottom: 0; width: 1px; height: 100%; transition: 0.4s ease; background-color: #4363c5; }
+@media (min-width: 960px) { .contacts-page button span { padding-top: 12px; padding-bottom: 12px; box-sizing: border-box; }
+  .contacts-page button span::after { content: ""; position: absolute; left: 0; top: 101%; width: 100%; height: 1px; transition: 0.5s ease; background-color: #4363c5; }
+  .contacts-page button span::before { content: ""; position: absolute; right: 0; bottom: 101%; width: 100%; height: 1px; transition: 0.4s ease; background-color: #4363c5; }
+  .contacts-page button::after { content: ""; position: absolute; left: 100%; top: 0; width: 1px; height: 100%; transition: 0.4s ease; background-color: #4363c5; }
+  .contacts-page button::before { content: ""; position: absolute; right: 100%; bottom: 0; width: 1px; height: 100%; transition: 0.4s ease; background-color: #4363c5; } }
 
 .contacts-page button:hover { box-shadow: inset 0 0 8px 1px #4363c5; }
 
-.contacts-page button:hover::after { left: 1px; }
-
-.contacts-page button:hover::before { right: 0; }
-
-.contacts-page button:hover span::after { top: 1%; }
-
-.contacts-page button:hover span::before { bottom: 1%; }
+@media (min-width: 960px) { .contacts-page button:hover::after { left: 1px; }
+  .contacts-page button:hover::before { right: 0; }
+  .contacts-page button:hover span::after { top: 1%; }
+  .contacts-page button:hover span::before { bottom: 1%; } }
 
 .contacts-page button:active { background-color: #4363c5; transition: 0s; box-shadow: none; }
 
@@ -544,17 +539,19 @@ img[data-object-fit="cover"] { object-fit: cover; }
 
 .js_animation-contacts ul a { opacity: 0; animation: fade-in 0.3s linear 0.6s forwards, color 4s linear 0.3s infinite; }
 
-.js_animation-contacts ul li:nth-child(1) a { animation-delay: 0.33333s; }
+.js_animation-contacts ul li:nth-child(1) a { animation-delay: 0.28571s; }
 
-.js_animation-contacts ul li:nth-child(2) a { animation-delay: 0.66667s; }
+.js_animation-contacts ul li:nth-child(2) a { animation-delay: 0.57143s; }
 
-.js_animation-contacts ul li:nth-child(3) a { animation-delay: 1s; }
+.js_animation-contacts ul li:nth-child(3) a { animation-delay: 0.85714s; }
 
-.js_animation-contacts ul li:nth-child(4) a { animation-delay: 1.33333s; }
+.js_animation-contacts ul li:nth-child(4) a { animation-delay: 1.14286s; }
 
-.js_animation-contacts ul li:nth-child(5) a { animation-delay: 1.66667s; }
+.js_animation-contacts ul li:nth-child(5) a { animation-delay: 1.42857s; }
 
-.js_animation-contacts ul li:nth-child(6) a { animation-delay: 2s; }
+.js_animation-contacts ul li:nth-child(6) a { animation-delay: 1.71429s; }
+
+.js_animation-contacts ul li:nth-child(7) a { animation-delay: 2s; }
 
 @font-face { font-family: 'fontello'; src: url("../../font/fontello.eot?64625495"); src: url("../../font/fontello.eot?64625495#iefix") format("embedded-opentype"), url("../../font/fontello.woff2?64625495") format("woff2"), url("../../font/fontello.woff?64625495") format("woff"), url("../../font/fontello.ttf?64625495") format("truetype"), url("../../font/fontello.svg?64625495#fontello") format("svg"); font-weight: normal; font-style: normal; }
 
