--- a/app/scss/components/contacts-page.scss
+++ b/app/scss/components/contacts-page.scss
@@ -59,73 +59,82 @@
     box-sizing: border-box;
     overflow: hidden;
     letter-spacing: 2px;
-
     span {
-      position: relative;
-      display: block;
       padding-top: 12px;
-      box-sizing: border-box;
       padding-bottom: 12px;
+      display: block;
+      position: relative;
+      box-sizing: border-box;
+    }
+
+    @media (min-width: $lg) {
+      span {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        box-sizing: border-box;
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 101%;
+          width: 100%;
+          height: 1px;
+          transition: 0.5s ease;
+          background-color: lighten($blue, 10%);
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          right: 0;
+          bottom: 101%;
+          width: 100%;
+          height: 1px;
+          transition: 0.4s ease;
+          background-color: lighten($blue, 10%);
+        }
+      }
+
       &::after {
         content: "";
         position: absolute;
-        left: 0;
-        top: 101%;
-        width: 100%;
-        height: 1px;
-        transition: 0.5s ease;
+        left: 100%;
+        top: 0;
+        width: 1px;
+        height: 100%;
+        transition: 0.4s ease;
         background-color: lighten($blue, 10%);
       }
 
       &::before {
         content: "";
         position: absolute;
-        right: 0;
-        bottom: 101%;
-        width: 100%;
-        height: 1px;
+        right: 100%;
+        bottom: 0;
+        width: 1px;
+        height: 100%;
         transition: 0.4s ease;
         background-color: lighten($blue, 10%);
       }
     }
 
-    &::after {
-      content: "";
-      position: absolute;
-      left: 100%;
-      top: 0;
-      width: 1px;
-      height: 100%;
-      transition: 0.4s ease;
-      background-color: lighten($blue, 10%);
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      right: 100%;
-      bottom: 0;
-      width: 1px;
-      height: 100%;
-      transition: 0.4s ease;
-      background-color: lighten($blue, 10%);
-    }
-
     &:hover {
       box-shadow: inset 0 0 8px 1px lighten($blue, 10%);
 
-      &::after {
-        left: 1px;
-      }
-      &::before {
-        right: 0;
-      }
-      span {
+      @media (min-width: $lg) {
         &::after {
-          top: 1%;
+          left: 1px;
         }
         &::before {
-          bottom: 1%;
+          right: 0;
+        }
+        span {
+          &::after {
+            top: 1%;
+          }
+          &::before {
+            bottom: 1%;
+          }
         }
       }
     }
